# paperfinder

./: LICENSE  README.md  generate.py  main.py  paper_reviewer_env.yml  pyproject.toml
paperfinder_nabi/: __init__.py  __main__.py  core.py
paperfinder_nabi/data/: keywordlist.txt  paperlist.txt  rsslist.txt
